# ai-project-manager

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml  lint-and-docker.yml  lint.yml
agent_controller/: __init__.py  agent_controller.py  scheduler.py
backend/: Dockerfile  README.md  db.py  docker-compose.yml  main.py  models.py  ollama_client.py  pyproject.toml
connectors/: __init__.py  calendar_client.py  todoist_client.py
helpers/: __init__.py  oauth_helper.py
scripts/: demo_schedule.py
tests/: test_calendar_client.py  test_calendar_errors.py  test_calendar_retry.py  test_db.py  test_scheduler.py  test_todoist_client.py  test_todoist_errors.py  test_todoist_retry.py
