[project]
name = "ai_project_manager_root"
version = "0.1.0"
description = "Monorepo root for AI project manager (creates a project-wide venv)."
requires-python = ">=3.10"
dependencies = [
  "google-api-python-client>=2.179.0",
  "google-auth-httplib2>=0.2.0",
  "google-auth-oauthlib>=1.2.2",
  "requests>=2.31.0",
]

[tool.setuptools]
packages = ["backend", "connectors", "agent_controller", "helpers"]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.ruff]
line-length = 88
lint.extend-ignore = ["E203"]
lint.select = ["E", "F", "W", "B", "C90"]
exclude = [".venv", "build", "dist", "backend/data.sqlite3", "**/__pycache__/**"]
target-version = "py311"

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]

